--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css --> 
-    <link rel="stylesheet" href="/estilização/estilo.css">
+    <link rel="stylesheet" href="estilização/estilo.css">
     <!-- jQuery --> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -79,7 +79,7 @@
 
             <div class="container-home-direito">
 
-                <img class="img-home" src="/img/dev-home.svg" alt="dev">
+                <img class="img-home" src="img/dev-home.svg" alt="dev">
 
             </div>
 
@@ -322,7 +322,7 @@
 
                 <div class="card-project animate__animated project1 ">
 
-                    <img class="img-project" src="/img/crud.png" alt="crud">
+                    <img class="img-project" src="img/crud.png" alt="crud">
                     <div id="card-detalhes-project" class="card-detalhes none animate__animated">
                         <h3>CRUD</h3>
                         <div>
@@ -341,7 +341,7 @@
 
                 <div class="card-project animate__animated project2 none ">
 
-                    <img class="img-project" src="/img/loginPintinhoBudista.png" alt="login Pintinho Budista">
+                    <img class="img-project" src="img/loginPintinhoBudista.png" alt="login Pintinho Budista">
                     <div id="card-detalhes-project" class="card-detalhes none animate__animated">
                         <h3>Login Pintinho Budista</h3>
                         <div>
@@ -364,7 +364,7 @@
 
                 <div class="card-project animate__animated project3 none ">
 
-                    <img class="img-project" src="/img/lol.png" alt="lol">
+                    <img class="img-project" src="img/lol.png" alt="lol">
                     <div id="card-detalhes-project" class="card-detalhes none animate__animated">
                         <h3>LOL</h3>
                         <div>
@@ -384,7 +384,7 @@
 
                 <div class="card-project animate__animated project4 none">
 
-                    <img class="img-project" src="/img/yugioh.png" alt="yu-gi-oh">
+                    <img class="img-project" src="img/yugioh.png" alt="yu-gi-oh">
                     <div id="card-detalhes-project" class="card-detalhes none animate__animated">
                         <h3>Yu-gi-oh</h3>
                         <div>
@@ -407,7 +407,7 @@
 
                 <div class="card-project animate__animated project5 none ">
 
-                    <img class="img-project" src="/img/portfolio.png" alt="crud">
+                    <img class="img-project" src="img/portfolio.png" alt="crud">
                     <div id="card-detalhes-project" class="card-detalhes none animate__animated">
                         <h3>Portfolio</h3>
                         <div>
@@ -480,6 +480,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/6b19261769.js" crossorigin="anonymous"></script>
-    <script src="/scripts/app.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
