correção de página

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             </div>
         </div>
         <button onclick="ativaPalheta()" class="botao-especial "><i class="fa-solid fa-gear girar"></i></button>
-        <button id="sol" onclick="lua()" class="botao-especial"><i class="fa-solid fa-sun"></i></button>
+        <button id="sol" onclick="lua()" class="botao-especial "><i class="fa-solid fa-sun"></i></button>
         <button id="lua" onclick="sol()" class="botao-especial none"><i class="fa-regular fa-moon"></i></button>
     </div>
 
     <main>
 
-        <section id="pagina1" class="container-home none animate__animated">
+        <section id="pagina1" class="container-home animate__animated">
 
             <div class="container-home-esquerdo">
 
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="botoes-about">
-                        <a href="/img/William Dev.pdf">Download CV</a>
+                        <a href="/img/William-Dev.pdf">Download CV</a>
                     </div>
                 </div>
 
@@ -426,7 +426,7 @@
             </div>
 
         </section>
-        <section id="pagina5"  class=" container-contact animate__animated">
+        <section id="pagina5"  class="none container-contact animate__animated">
 
             <div>
                 <h2 class="titulo-contact">Contact</h2>
